--- a/about.html
+++ b/about.html
@@ -99,6 +99,7 @@
             <h1 id="magtitle">Girlbosses in STEM.</h1>
             <hr id="separator">
             <ul id="navbar">
+                <li class="navitem"><a href=about.html">ABOUT</a></li>
                 <li class="navitem"><a href="herstory.html">HERSTORY</a></li>
                 <li class="navitem"><a href="icons.html">ICONS</a></li>
                 <li class="navitem"><a href="breakthroughs.html">BREAKTHROUGHS</a></li>
