--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                     font-size: 40px;
                     padding-top: 30px;
                     padding-bottom: 10px;
-                    width: 20%;
+                    width: 10%;
                     text-align: center;
                 }
                 .navitem a{
@@ -99,7 +99,7 @@
             <h1 id="magtitle">Girlbosses in STEM.</h1>
             <hr id="separator">
             <ul id="navbar">
-                <li class="navitem"><a href=about.html">ABOUT</a></li>
+                <li class="navitem"><a href="about.html">ABOUT</a></li>
                 <li class="navitem"><a href="herstory.html">HERSTORY</a></li>
                 <li class="navitem"><a href="icons.html">ICONS</a></li>
                 <li class="navitem"><a href="breakthroughs.html">BREAKTHROUGHS</a></li>
