--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     font-size: 40px;
                     padding-top: 30px;
                     padding-bottom: 10px;
-                    width: 25%;
+                    width: 10%;
                     text-align: center;
                 }
                 .navitem a{
@@ -142,10 +142,11 @@
             <h1 id="magtitle">Girlbosses in STEM.</h1>
             <hr id="separator">
             <ul id="navbar">
+                <li class="navitem"><a href="about.html">ABOUT</a></li>
                 <li class="navitem"><a href="herstory.html">HERSTORY</a></li>
                 <li class="navitem"><a href="icons.html">ICONS</a></li>
                 <li class="navitem"><a href="breakthroughs.html">BREAKTHROUGHS</a></li>
-                <li class="navitem"><a href="about.html">ABOUT</a></li>
+                <li class="navitem"><a href="index.html">HOME</a></li>
               </ul>
             <img id="headline" src="headline.png" alt="Headline: 'J&J announces scholarship winners for women in STEM program'; Article: 'Johnson & Johnson grants $150,000 
             scholarships to six female researchers—Ange-Therese Akono Ph.D., Noémie-Manuelle Dorval Courchesne, Ph.D., Selma Masri, Ph.D., Atieh Moridi, Ph.D., Ph.D., Feifei 
