--- a/herstory.html
+++ b/herstory.html
@@ -182,9 +182,9 @@
             <h2>READ MORE</h2>
             <table>
                 <tr>
-                    <td id="story1"><strong><a href="breakthroughs.html">These are the six 2022 J&J Women in STEM2D</a></strong></td>
+                    <td id="story1"><strong><a href="index.html">These are the six 2022 J&J Women in STEM2D</a></strong></td>
                     <td class="between"></td>
-                    <td id="story3"><strong><a href="herstory.html">LOOK: Female professor bags STEM award</a></strong></td>
+                    <td id="story3"><strong><a href="breakthroughs.html">LOOK: Female professor bags STEM award</a></strong></td>
                     <td class="between"></td>
                     <td id="story2"><strong><a href="icons.html">ICON of the MONTH: Hedy Lamarr</a></strong></td>
                 </tr>
